<resources>
    <string name="app_name">eCarriers</string>
    <string name="powered_by">Powered by eCarriers</string>
    <string name="trip_activity_title">Viaje</string>
    <string name="trips_activity_title">Viajes</string>
    <string name="production_url">https://ecarriers.herokuapp.com</string>

    <!-- Strings generales -->
    <string name="msg_no_connection">No hay conexión a Internet.</string>
    <string name="action_ok">OK</string>
    <string name="action_yes">SÍ</string>
    <string name="action_no">NO</string>
    <string name="action_cancel">CANCELAR</string>
    <string name="msg_no_connection_operations">Tus acciones se sincronizarán cuando tengas conexión.</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Inicia sesión</string>
    <string name="action_sign_out">Cerrar sesión</string>
    <string name="action_settings">Configuración</string>
    <string name="action_sign_in_short">Inicia sesión</string>
    <string name="error_invalid_email">El email es inválido</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">El email o la contraseña no son correctos</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Los permisos de contactos son necesarios para autocompletar el email."</string>

    <!-- Strings related to the trip list -->
    <string name="text_no_trips">No hay viajes por el momento.</string>
    <string name="msg_get_trips_error">No se pudieron actualizar los viajes. Verifique su conexión.</string>

    <string name="text_trip_pending">Pendiente</string>
    <string name="text_trip_driving">Viajando</string>
    <string name="text_trip_finished">Finalizado</string>

    <!-- Strings related to trip details -->
    <string name="text_report_location">REPORTAR UBICACIÓN</string>
    <string name="text_start_trip">COMENZAR VIAJE</string>
    <string name="text_finish_trip">FINALIZAR VIAJE</string>

    <string name="text_waiting_pickup_state">Retiro pendiente</string>
    <string name="text_being_shipped_state">Retirado</string>
    <string name="text_delivered_state">Entregado</string>

    <string name="text_shipment_list">ENVÍOS</string>

    <string name="text_pick_up_address">Retiro:&#160;</string>
    <string name="text_delivery_address">Entrega:&#160;</string>

    <string name="title_item_list">Artículos para&#160;</string>
    <string name="action_change_state">Guardar</string>

    <string name="title_cant_finish_trip">No se puede finalizar viaje</string>
    <string name="msg_cant_finish_trip">Para finalizar un viaje, el mismo debe estar en estado VIAJANDO y todos los envíos deben estar entregados.</string>

    <string name="title_confirm_finish_trip">¿Finalizar viaje?</string>
    <string name="msg_confirm_finish_trip">Una vez finalizado no podrás volver a editarlo o verlo.</string>
    <string name="action_finish_trip">FINALIZAR</string>

    <string name="title_confirm_start_trip">¿Comenzar viaje?</string>
    <string name="msg_confirm_start_trip">Una vez comenzado, no podrás volver a marcarlo como pendiente.</string>
    <string name="action_start_trip">COMENZAR</string>

    <string name="title_send_location">Enviar ubicación</string>
    <string name="msg_send_location">¿Deseas enviar tu ubicación actual a los clientes de este viaje?</string>

    <string name="msg_report_location_ok">La ubicación se ha enviado correctamente.</string>
    <string name="msg_report_location_error">No se ha podido enviar la ubicación. Comprueba tu conexión o intenta nuevamente más tarde.</string>

    <string name="msg_no_location_error">No se ha podido obtener tu ubicación actual. Asegúrate de tener la ubicación de tu dispositivo habilitada.</string>
    <string name="msg_no_location_permission">No tenemos permiso para obtener tu ubicación. Ve a la configuración de la aplicación para otorgar el permiso.</string>

    <string name="title_server_address_preference">Dirección de la API</string>
    <string name="key_server_address_preference">server_address_preference</string>
    <string name="text_server_address_preference">Ingresa https://ecarriers.herokuapp.com y luego ve hacia atrás. Si eres desarrollador, el formato es ip:puerto.</string>
</resources>
