<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.TripActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/main_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:orientation="vertical">
            <!-- focusableInTouchMode is set to recyclerview's parent layout
                 for start at top scroll position, without this property
                 nestedScrollView start at middle of scroll -->

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardUseCompatPadding="true"
                card_view:cardCornerRadius="2dp"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:id="@+id/tv_trip_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/tv_title_big"
                        android:padding="5dp"
                        android:layout_margin="5dp"
                        android:textColor="@color/textColorAccent"
                        android:text="@string/text_trip_driving"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_weight="10"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/origin_indicator"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/origin_indicator"
                                android:layout_centerInParent="true"/>

                            <View
                                android:id="@+id/line"
                                android:layout_width="2dp"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/origin_indicator"
                                android:layout_centerHorizontal="true"
                                android:background="@color/colorAccent"/>

                        </RelativeLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="90"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center_vertical">

                            <TextView
                                android:id="@+id/tv_origin"
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:textSize="@dimen/tv_title_small"
                                android:textColor="@color/textColorPrimary"
                                android:padding="5dp"/>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_weight="10"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/destination_indicator"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/destination_indicator"
                                android:layout_centerInParent="true"/>

                            <View
                                android:layout_width="2dp"
                                android:layout_height="wrap_content"
                                android:layout_above="@id/destination_indicator"
                                android:layout_centerHorizontal="true"
                                android:background="@color/colorAccent"/>

                        </RelativeLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="90"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center_vertical">

                            <TextView
                                android:id="@+id/tv_destination"
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:textSize="@dimen/tv_title_small"
                                android:textColor="@color/textColorPrimary"
                                android:padding="5dp"/>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:src="@drawable/ic_event_black_18dp"
                            android:padding="5dp"
                            android:tint="@color/icons_generic"/>

                        <TextView
                            android:id="@+id/tv_departure_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/tv_body"
                            android:padding="5dp"
                            android:textColor="@color/textColorSecondary"
                            android:textStyle="bold"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_start_trip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_start_trip"
                            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

                        <Button
                            android:id="@+id/btn_report_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_report_location"
                            android:layout_marginLeft="10dp"
                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
                            android:textColor="@color/colorPrimaryDark"/>

                        <Button
                            android:id="@+id/btn_finish_trip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_finish_trip"
                            android:layout_marginLeft="10dp"
                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
                            android:visibility="gone"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_shipment_list"
                android:textSize="@dimen/tv_title_small"
                android:textColor="@color/textColorSecondary"
                android:textStyle="bold"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="12dp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_shipment_publications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="@dimen/gv_margin_top_bottom"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>

